# agentic-ai-engineering

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-docker.yml  build-push-ecr.yml  deploy-ecs-manual.yml  deploy-eks-manual.yml  lint.yml  test.yml  undeploy-aws-project.yml
data/local_notes/: travel_india.md
deployments/aws_ecs_fargate/: README.md
deployments/aws_eks/: README.md
deployments/docker/: README.md
deployments/docker_compose/: README.md
docs/: README.md  agent_loop.md  aws_ecs_fargate.md  aws_eks.md  aws_services_and_cleanup.md  cost_control.md  docker.md  docker_compose.md  evals_and_tests.md  framework_comparison.md  framework_selection_guide.md  github_actions.md  gradio.md  guardrails.md  jupyter.md  observability.md  project_to_aws.md  prompting.md  structured_outputs.md  tool_calling.md  uv.md  workflow_patterns.md
evals/: README.md  __init__.py  adapters.py  graders.py  io.py  models.py  run_evals.py  run_project_evals.py
projects/: README.md  project_catalog.json
projects/comparison_agent/no_framework/: README.md  app.py  docker-compose.yml  pyproject.toml
projects/comparison_agent/no_framework/prompts/: final_answer.md  guardrails.md  system.md  tool_selection.md
projects/comparison_agent/no_framework/src/comparison_no_framework/: __init__.py  agent.py  config.py  errors.py  guardrails.py  llm.py  memory.py  observability.py  schemas.py  tool_registry.py  tools.py  ui.py
projects/comparison_agent/no_framework/tests/: test_agent_loop.py  test_guardrails.py  test_schemas.py  test_tool_registry.py  test_tools.py
projects/openai_agents_sdk_projects/travel_planner_agent/: README.md  app.py  pyproject.toml
projects/openai_agents_sdk_projects/travel_planner_agent/data/: travel_india.md
projects/openai_agents_sdk_projects/travel_planner_agent/prompts/: system.md
projects/openai_agents_sdk_projects/travel_planner_agent/src/travel_planner_agent/: __init__.py  service.py
projects/openai_agents_sdk_projects/travel_planner_agent/tests/: test_service.py
scripts/: resolve_project.py  validate_repo.py
tests/: test_evals.py  test_project_context.py  test_project_pairs.py  test_repository.py
(+106 files in other folders)
