[project]
name = "agentic-ai-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.19.0",
    "ipykernel>=7.3.0",
    "openai>=2.43.0",
    "openai-agents>=0.17.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
