[project]
name = "agentic-ai-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.19.0",
    "httpx>=0.28.1",
    "openai>=2.43.0",
    "openai-agents>=0.17.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "tenacity>=9.1.4",
    "tiktoken>=0.13.0",
]

[dependency-groups]
dev = ["jupyter>=1.1", "ipykernel>=7.3.0", "nbformat>=5.10", "pytest>=8.3", "ruff>=0.11", "mypy>=1.15"]

[tool.pytest.ini_options]
testpaths = ["tests", "projects"]
python_files = ["test_*.py"]
addopts = "-q --import-mode=importlib"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["notebooks", "scripts/scaffold_course.py", ".venv"]

[tool.ruff.lint]
select = ["F", "B"]
ignore = ["E402"]
