[project]
name = "comparison-no-framework"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["openai>=1.75", "openai-agents>=0.2", "python-dotenv>=1", "pydantic>=2.10", "requests>=2.32", "gradio>=5"]
[dependency-groups]
dev = ["pytest>=8.3", "ruff>=0.11"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/comparison_no_framework"]
